apollo-federation/src/connectors/expand/visitors/snapshots/apollo_federation__connectors__expand__visitors__selection__tests__walk_interface_with_typename.snap
---
source: apollo-federation/src/connectors/expand/visitors/selection.rs
expression: target.schema().serialize().to_string()
---
type User implements Node {
  id: ID!
  name: String!
}

interface Node {
  id: ID!
  name: String!
}

type Query {
  node: Node
}
