apollo-federation/src/connectors/expand/visitors/snapshots/apollo_federation__connectors__expand__visitors__selection__tests__walk_object_primitive_shape_error.snap
---
source: apollo-federation/src/connectors/expand/visitors/selection.rs
expression: result.unwrap_err().to_string()
---
An internal error has occurred, please report this bug to Apollo.

Details: Unexpected primitive String provided for object type Product
