apollo-federation/src/connectors/expand/visitors/snapshots/apollo_federation__connectors__expand__visitors__selection__tests__walk_object_with_array_shape.snap
---
source: apollo-federation/src/connectors/expand/visitors/selection.rs
expression: target.schema().serialize().to_string()
---
type Product {
  id: ID!
  name: String!
}

type Query {
  products: [Product]
}
