apollo-federation/src/connectors/expand/visitors/snapshots/apollo_federation__connectors__expand__visitors__selection__tests__walk_object_with_nested_shape.snap
---
source: apollo-federation/src/connectors/expand/visitors/selection.rs
expression: target.schema().serialize().to_string()
---
enum Category {
  ELECTRONICS
  CLOTHING
  FOOD
}

type Product {
  id: ID!
  name: String!
  category: Category
}

type Query {
  product: Product
}
