apollo-federation/src/connectors/expand/visitors/snapshots/apollo_federation__connectors__expand__visitors__selection__tests__walk_union_with_typename.snap
---
source: apollo-federation/src/connectors/expand/visitors/selection.rs
expression: target.schema().serialize().to_string()
---
type Cat {
  id: ID!
  meow: Boolean
}

union Pet = Cat | Dog

type Query {
  pet: Pet
}
